// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The header component... that is not user authenticated... will display correct header. 1`] = `
<ion-toolbar
  color="primary"
>
  <a
    href="/home"
  >
    <img
      alt="BoredGamerz Logo"
      className="logo-hero"
      src="https://storage.googleapis.com/boredgamerz_assets/BoredGamerzLogo_72-2.png"
    />
  </a>
  <ion-buttons
    slot="primary"
  >
    <ion-button
      onClick={[Function]}
    >
      Login
    </ion-button>
  </ion-buttons>
</ion-toolbar>
`;

exports[`The header component... that is user authenticated... will display correct header. 1`] = `
<ion-toolbar
  color="primary"
>
  <a
    href="/home"
  >
    <img
      alt="BoredGamerz Logo"
      className="logo-hero"
      src="https://storage.googleapis.com/boredgamerz_assets/BoredGamerzLogo_72-2.png"
    />
  </a>
  <ion-buttons
    slot="primary"
  >
    <ion-button
      href="/profile/games"
      onClick={[Function]}
    >
      My Games
    </ion-button>
    <ion-button
      href="/games"
      onClick={[Function]}
    >
      Find Games
    </ion-button>
    <ion-button
      href="/games/create"
      onClick={[Function]}
    >
      Create A Game
    </ion-button>
    <ion-button
      onClick={[Function]}
    >
      Profile
    </ion-button>
    <img
      alt="profile"
      className="user-image"
      height="50px"
      onClick={[Function]}
      src="https://lh3.googleusercontent.com/a-/AOh14GiG4KuyPH8-ToSqzoBLwPTvb-px4DboWJn_Gujs=s96-c"
    />
  </ion-buttons>
</ion-toolbar>
`;
